buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' } // Mixin 仓库
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7.+' // 添加这一行

    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'maven-publish'
apply plugin: 'idea' // 按照你的要求改为 idea 插件
apply plugin: 'org.spongepowered.mixin' // 应用插件

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

// 1.20.1 必须使用 Java 17
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    // 映射配置，从 properties 读取
    mappings channel: "official", version: "1.20.1"


    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.mixins.json"

    // 生成 refmap 的配置
    config "${mod_id}.mixins.json"
}
// 包含生成的资源
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
    flatDir {
        dir 'libs'
    }
}

dependencies {
    // 对应 1.20.1 的 Forge 核心
    minecraft "net.minecraftforge:forge:1.20.1-${forge_version}"

    // Create 及其依赖 (使用 fg.deobf 确保反混淆)
    implementation fg.deobf("blank:create:0.5.1.j") { transitive = false }
    implementation fg.deobf("blank:ponder:1.0.37")
    implementation fg.deobf("blank:registrate:1.3.8")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.5.0")) {
        jarJar.ranged(it, "[0.5.0,)")
    }
}

// 处理 mods.toml 占位符替换
tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version: forge_version,
            forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

// IDEA 专用配置
idea {
    module {
        downloadSources = true
        downloadJavadoc = false
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'GBK' // 保持你原要求的 GBK 编码
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}